# lilota-django

./: MANIFEST.in  README.md  pyproject.toml  recreate_db.sh  requirements.txt  setup.py
app/: settings.py
lilota_django/: apps.py  stores.py
lilota_django/migrations/: 0001_initial.py
lilotadjango/: apps.py  models.py  stores.py  tests.py
